<resources>
    <string name="app_name">Traveloka Chatbot</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="no_account">"Doesn't have account? "</string>
    <string name="register">Register</string>
    <string name="login_image">Login Image</string>
    <string name="google_login">Google Login</string>
    <string name="register_image">Register Image</string>
    <string name="name">Name</string>
    <string name="have_account">"Already have account? "</string>
    <string name="type_a_message">Type a message …</string>
    <string name="send">Send</string>
    <string name="dummy_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</string>
    <string name="message">Chat</string>
    <string name="dummy_timestamp">10:00</string>
    <string name="splash">Traveloka Chatbot Logo Splash Screen</string>
    <string name="sign_out">Sign out</string>
    <string name="chat_bot_logo">Chat bot logo</string>
    <string name="send_error">Failed to send message</string>
</resources>